*Empty MediaWiki Message*

--- a/མ་ཤོག།.mw
+++ b/མ་ཤོག།.mw
@@ -44,8 +44,10 @@ You may need to download [http://www.babelstone.co.uk/Test/Tibetan.html Tibetan 
 <!---------------------------------------------->
 | [[Image:Dharma_Wheel.svg|40px|center]]
 | style="font-size: 95%; border-top: 1px dashed #AAAAAA;" | '''ཆོས''' <!--Religion--><br/>
-[[སངས་རྒྱས་ཀྱི་བསྟན་པ]]།<!--Buddhism-->&nbsp;· [[བཀའ་བརྒྱུད་པ]]&nbsp;·་[[འབྲུག་པ་བཀའ་བརྒྱུད|	འབྲུག་པ་བཀའ་བརྒྱུད་པ]]&nbsp;·་[[སྔ་འགྱུར་རྙིང་མ་པ]]&nbsp;· [[ས་སྐྱ་བ]]  <br> 
-[[ཧིན་དུ་ཆོས་ལུགས]]&nbsp;· [[ཡེ་ཤུའི་ཆོས་ལུགས]]<!--Christianity-->&nbsp;- [[ཁ་ཆེའི་ཆོས་ལུགས]]<!--Islam-->&nbsp;· [[ཆད་ལྟའི་རིང་ལུགས]]<!--Atheism-->&nbsp;· 
+[[སངས་རྒྱས་ཀྱི་བསྟན་པ]]།<!--Buddhism-->&nbsp;· [[བཀའ་བརྒྱུད་པ]]&nbsp;·་[[འབྲུག་པ་བཀའ་བརྒྱུད|	འབྲུག་པ་བཀའ་བརྒྱུད་པ]]&nbsp;· [[སྔ་འགྱུར་རྙིང་མ་པ]]&nbsp;· [[ས་སྐྱ་པ]]&nbsp;·  <br> 
+
+[[མུ་སྟེགས་པ་ཆོས་ལུགས]]&nbsp;·  [[ཧིན་དུ་ཆོས་ལུགས]]&nbsp;· <!--Hinduism-->&nbsp;· [[རྒྱལ་བ་པ]]<!--Jainism-->&nbsp;· [[ཁྱབ་འཉཝཇུག་བ་ཆོས་ལུགས]] <!--Vaishnava-->&nbsp;· [[དབང་ཕྱུག་]] <!--Śavite-->
+[[ཡེ་ཤུའི་ཆོས་ལུགས]]<!--Christianity-->&nbsp;- [[ཁ་ཆེའི་ཆོས་ལུགས]]<!--Islam-->&nbsp;· [[ཆད་ལྟའི་རིང་ལུགས]]<!--Atheism-->&nbsp;· 
 <!---------------------------------------------->
 |}
 | width="50%" valign="top" | 
