robot  Modifying: [[szl:Irlandyjo (wyspa)]]

--- a/ཨའིརི་ལེནཌ་.mw
+++ b/ཨའིརི་ལེནཌ་.mw
@@ -6,8 +6,6 @@
 *[[སུའིཊ་ཛར་ལེན་]] 
 {{Europe}}
 
-[[szl:Irlandja (wyspa)]]
-
 [[af:Ierland]]
 [[am:አየርላንድ]]
 [[ang:Īrland]]
@@ -68,6 +66,7 @@
 [[sl:Irska (otok)]]
 [[sm:'Aealani]]
 [[sr:Ирска]]
+[[szl:Irlandyjo (wyspa)]]
 [[ta:அயர்லாந்து]]
 [[th:เกาะไอร์แลนด์]]
 [[tl:Pulo ng Irlanda]]
