*Empty MediaWiki Message*

--- a/མ་ཤོག།.mw
+++ b/མ་ཤོག།.mw
@@ -9,7 +9,7 @@ __NOTOC__
 
 If you speak Dzongkha and think it would be cool to have your own Encyclopedia then '''you''' can make it.
 
-{{NUMBEROFARTICLES}} [[Special:Allpages|articles]] currently exist.
+'''[[Special:Statistics|{{NUMBEROFARTICLES}}]]''' [[Special:Allpages|articles]] currently exist.
 
 '''''Go ahead. Translate this page and start working on your Encyclopedia.'''''
 
