--- a/སུའིཊ་ཛར་ལེན་.mw
+++ b/སུའིཊ་ཛར་ལེན་.mw
@@ -124,7 +124,7 @@
 [[sr:Швајцарска]]
 [[sv:Schweiz]]
 [[sw:Uswisi]]
-[[szl:Šwajcarja]]
+[[szl:Šwajcaryjo]]
 [[ta:சுவிட்சர்லாந்து]]
 [[tet:Suisa]]
 [[tg:Швейтсария]]
