robot  Adding: [[haw:‘Ane‘ālika]], [[sah:Антарктика]]

--- a/ཨེན་ཊཱག་ཊི་ཀ་.mw
+++ b/ཨེན་ཊཱག་ཊི་ཀ་.mw
@@ -51,6 +51,7 @@
 [[gl:Antártida]]
 [[gu:ઍન્ટાર્કટિકા]]
 [[hak:Nàm-khi̍t-chû]]
+[[haw:‘Ane‘ālika]]
 [[he:אנטארקטיקה]]
 [[hi:अंटार्कटिका]]
 [[hr:Antarktika]]
@@ -94,6 +95,7 @@
 [[qu:Antartika]]
 [[ro:Antarctica]]
 [[ru:Антарктида]]
+[[sah:Антарктика]]
 [[scn:Antàrtidi]]
 [[sco:Antarcticae]]
 [[se:Antárktis]]
