--- a/ཨས་ཊེཡེ་ལི་ཡ.mw
+++ b/ཨས་ཊེཡེ་ལི་ཡ.mw
@@ -27,7 +27,7 @@
 [[bs:Australija]]
 [[ca:Austràlia]]
 [[cdo:Ó̤-ciŭ]]
-[[ceb:Australya]]
+[[ceb:Awstralya]]
 [[crh:Avstraliya]]
 [[cs:Austrálie]]
 [[cv:Австрали]]
@@ -115,7 +115,7 @@
 [[oc:Austràlia]]
 [[om:Australia]]
 [[os:Австрали]]
-[[pa:ਆਸਟਰੇਲਿਆ]]
+[[pa:ਆਸਟ੍ਰੇਲੀਆ]]
 [[pam:Australia]]
 [[pdc:Australie]]
 [[pih:Ostrielya]]
@@ -139,6 +139,7 @@
 [[sm:Ausetalia]]
 [[sq:Australia]]
 [[sr:Аустралија]]
+[[su:Australia]]
 [[sv:Australien]]
 [[szl:Australijo]]
 [[ta:ஆஸ்திரேலியா]]
