robot  Adding: [[kv:Выль Зеландия]]

--- a/ནིའུ་ཛི་ལེནཌ་.mw
+++ b/ནིའུ་ཛི་ལེནཌ་.mw
@@ -66,6 +66,7 @@
 [[ko:뉴질랜드]]
 [[ks:न्यू-जीलैंड]]
 [[ku:Zêlanda Nû]]
+[[kv:Выль Зеландия]]
 [[kw:Mordir Nowydh]]
 [[la:Nova Zelandia]]
 [[lb:Neiséiland]]
