--- a/ཛིམ་བབ་ཝེ་.mw
+++ b/ཛིམ་བབ་ཝེ་.mw
@@ -75,7 +75,7 @@
 [[mn:Зимбабве]]
 [[mr:झिम्बाब्वे]]
 [[ms:Zimbabwe]]
-[[nah:Zimbabhue]]
+[[nah:Zimbahue]]
 [[nds:Simbabwe]]
 [[nl:Zimbabwe]]
 [[nn:Zimbabwe]]
