--- a/བྱང་ཀོ་རི་ཡ་.mw
+++ b/བྱང་ཀོ་རི་ཡ་.mw
@@ -1,5 +1,7 @@
 [[Image:LocationNorthKorea.png|right|thumb|བྱང་ཀོ་རི་ཡ་]]
 [[Image:Flag of North Korea.svg|right|thumb]]
+[[Image:Kn-map.gif|right|thumb]]
+
 '''བྱང་ཀོ་རི་ཡ་'''
 
 ----
