--- a/ཨས་ཊེཡེ་ལི་ཡ.mw
+++ b/ཨས་ཊེཡེ་ལི་ཡ.mw
@@ -149,7 +149,7 @@
 [[tet:Austrália]]
 [[tg:Австралия]]
 [[th:ประเทศออสเตรเลีย]]
-[[tl:Australia]]
+[[tl:Australya]]
 [[tpi:Ostrelia]]
 [[tr:Avustralya]]
 [[ty:Autereraria]]
