--- a/ཏ་ཇག་ཀིསི་ཏཱན་.mw
+++ b/ཏ་ཇག་ཀིསི་ཏཱན་.mw
@@ -119,7 +119,7 @@
 [[vi:Tajikistan]]
 [[vo:Tacikistän]]
 [[wo:Tajikistaan]]
-[[wuu:塔奇基斯当]]
+[[wuu:塔吉克斯坦]]
 [[yi:טאדזשיקיסטאן]]
 [[zh:塔吉克斯坦]]
 [[zh-min-nan:Tajikistan]]
