--- a/ཇ་པཱན.mw
+++ b/ཇ་པཱན.mw
@@ -1,5 +1,6 @@
-[[Image:Mountfujijapan.jpg|right|thumb|ཇ་པཱན]]
 [[Image:Flag of Japan.svg|right|thumb]]
+[[Image:Japan sea map.png|right|thumb]]
+[[Image:Mountfujijapan.jpg|right|thumb|ཇ་པཱན]]
 '''ཇ་པཱན་'''
 
 ----
