*Empty MediaWiki Message*

--- a/རྒྱལ་པོ་འཇིགས་མེད་ཁེ་གསར་རྣམ་རྒྱལ་དབང་པྱུག་.mw
+++ b/རྒྱལ་པོ་འཇིགས་མེད་ཁེ་གསར་རྣམ་རྒྱལ་དབང་པྱུག་.mw
@@ -1,4 +1,4 @@
 དེ་རིང་གསར་དུ་དྲ་ཚིགས་འདིར་ཇོན་པའི་བོད་མི་ཞིག་ཡིན།  ཇོག་མར་ཆོས་དང་རིག་གཞུང་གཅིག་པའི་འབྲུག་རྒྱལ་ཁབ་གྱི་རྒྱལ་འབངས་ཡོངས་ལ་བཀྲ་ཤིས་བདེ་ལེགས་ཞུ།
 དེ་དང་ཆབ་གཅིག   འཇིག་རྟེན་བདེ་ཞིང་ལོ་ལེགས་དང་།།  འབྲུ་རྣམས་འཕེལ་ཞིང་ཆོས་འཕེལ་ཞིང་།།   བདེ་ལེགས་ཕུན་སུམ་ཚོགས་པ་དང་།།  ཡིད་ལ་འདོད་པ་ཀུན་འགྲུབ་ཤོག །  
-ཅེས་པའི་སྨོན་ཚིག་དང་བཅས་འབྲུག་རྒྱལ་བོ་འཇིགས་མེད་ཁེ་གསར་རྣམ་རྒྱལ་དབང་ཕྱུག་མཆོག་གི་མཛད་འཕྲིན་འཛམ་གླིང་གི་ཡུལ་གྲུ་སོར་ཁྱབ་པའི་སྨོན་འདུན་ཞུ། 
+ཅེས་པའི་སྨོན་ཚིག་དང་བཅས་འབྲུག་རྒྱལ་བོ་འཇིགས་མེད་གེ་གསར་རྣམ་རྒྱལ་དབང་ཕྱུག་མཆོག་གི་མཛད་འཕྲིན་འཛམ་གླིང་གི་ཡུལ་གྲུ་སོར་ཁྱབ་པའི་སྨོན་འདུན་ཞུ། 
  བོད་མདོ་སྨད་ཨ་མདོ་ས་ཆ་རུ་བན་ཤུལ་འཁྱམ་བསེ་རུ་ཞེས་པས་ཕུལ།
