--- a/ཨེ་ཤར་ཡ.mw
+++ b/ཨེ་ཤར་ཡ.mw
@@ -6,6 +6,7 @@ The following is the list of all countries.
 <nowiki>*</nowiki> - states without general international recognition.
 
 == རྒྱལ་ཁབབི་ ཐོ། ཐོ་ཡིག ==
+[[འཛམ་གླིང་རྒྱལ་ཁབ་དག་གི་མིང་རྫོང་དབྱིན་རྒྱ་གསུམ་ཤན་བསྦྱར]]
 
 === ཨ ===
 <onlyinclude>
