[[File:Uetersen Klosterkirche 00.jpg|thumb|left|[[ཨུ་ཏེར་སེན]]]]

--- a/ཇཱར་མ་ནི.mw
+++ b/ཇཱར་མ་ནི.mw
@@ -12,8 +12,16 @@
 |}
 '''ཇཱར་མ་ནི་'''
 
+
+
+
+
+
 ----
-* [[ཨུ་ཏེར་སེན]]
+
+
+[[File:Uetersen Klosterkirche 00.jpg|thumb|left|[[ཨུ་ཏེར་སེན]]]]
+
 
 
 {{Europe}}
