--- a/ཨེ་ཤར་ཡ.mw
+++ b/ཨེ་ཤར་ཡ.mw
@@ -286,10 +286,10 @@ The following is the list of all countries.
 * '''[[Uzbekistan]]''' – Republic of Uzbekistan
 
 === V ===
-* '''Vanuatu''' – Republic of Vanuatu
-* '''Vatican City''' – State of the Vatican City.
-* '''Venezuela''' – Bolivarian Republic of Venezuela
-* '''Vietnam''' – Socialist Republic of Vietnam
+* '''[[Vanuatu]]''' – Republic of Vanuatu
+* '''[[Vatican City]]''' – State of the Vatican City.
+* '''[[Venezuela]]''' – Bolivarian Republic of Venezuela
+* '''[[Vietnam]]''' – Socialist Republic of Vietnam
 * [[British Virgin Islands|Virgin Islands, British]] – British Virgin Islands (''UK overseas territory'')
 * [[U.S. Virgin Islands|Virgin Islands, United States]] – United States Virgin Islands (''US organized territory'')
 
