--- a/ཨྀཊ་ལི.mw
+++ b/ཨྀཊ་ལི.mw
@@ -1,21 +1,1 @@
-{| border=1 align=right cellpadding=4 cellspacing=0 width=300 style="margin: 0 0 1em 1em; background: #f9f9f9; border: 1px #aaaaaa solid; border-collapse: collapse; font-size: 95%;"
-|+<big><big>'''''ཨྀཊ་ལི ''<br />''Italia''<br />'''''</big></big>
-|-
-| style="background:#efefef;" align="center" colspan=2 |
-{| border="0" cellpadding="2" cellspacing="0"
-|-
-| align="center" width="140px" | [[File:Flag of Italy.svg|125px|]]
-| align="center" width="140px" | [[File:Emblem of Italy.svg|105px]]
-|}
-|-
-| align=center colspan=2 | [[File:Italy in European Union.svg|250px]]
-|}
-'''ཨྀཊ་ལི '''
-* Commons:[https://commons.wikimedia.org/wiki/Category:Italy]
-
-{{Europe}}
-
-{{stub}}
-
-[[Category:ཨྀཊ་ལི |*]]
-[[Category:རྒྱལ་ཁབ]]
+#redirect [[ཨྀཊ་ལི་]]
