Redirected page to [[ཌེན་མཱཀ་]]

--- a/ཌེན་མཱཀ.mw
+++ b/ཌེན་མཱཀ.mw
@@ -1,21 +1,1 @@
-{| border=1 align=right cellpadding=4 cellspacing=0 width=300 style="margin: 0 0 1em 1em; background: #f9f9f9; border: 1px #aaaaaa solid; border-collapse: collapse; font-size: 95%;"
-|+<big><big>'''''ཌེན་མཱཀ''<br />''Kongeriget Danmark''<br />'''''</big></big>
-|-
-| style="background:#efefef;" align="center" colspan=2 |
-{| border="0" cellpadding="2" cellspacing="0"
-|-
-| align="center" width="140px" | [[File:Flag of Denmark.svg|125px|]]
-| align="center" width="140px" | [[File:National Coat of arms of Denmark.svg|105px]]
-|}
-|-
-| align=center colspan=2 | [[File:Denmark in European Union.svg|250px]]
-|}
-'''ཌེན་མཱཀ'''
-* Commons:[https://commons.wikimedia.org/wiki/Category:Denmark]
-
-{{Europe}}
-
-{{stub}}
-
-[[Category:ཌེན་མཱཀ|*]]
-[[Category:རྒྱལ་ཁབ]]
+#redirect [[ཌེན་མཱཀ་]]
