--- a/ཕརཱནས.mw
+++ b/ཕརཱནས.mw
@@ -1,21 +1,1 @@
-{| border=1 align=right cellpadding=4 cellspacing=0 width=300 style="margin: 0 0 1em 1em; background: #f9f9f9; border: 1px #aaaaaa solid; border-collapse: collapse; font-size: 95%;"
-|+<big><big>'''''ཕརཱནས''<br />''France''<br />'''''</big></big>
-|-
-| style="background:#efefef;" align="center" colspan=2 |
-{| border="0" cellpadding="2" cellspacing="0"
-|-
-| align="center" width="140px" | [[File:Flag of France.svg|125px|]]
-| align="center" width="140px" | [[File:Armoiries république française.svg|105px]]
-|}
-|-
-| align=center colspan=2 | [[File:Mapadefrancia.svg|250px]]
-|}
-'''ཕརཱནས'''
-* Commons:[https://commons.wikimedia.org/wiki/France]
-
-{{Europe}}
-
-{{stub}}
-
-[[Category:ཕརཱནས|*]]
-[[Category:རྒྱལ་ཁབ]]
+#redirect [[ཕརཱནསི་]]
