*Empty MediaWiki Message*

--- a/ཕིན་ལེནཌ་.mw
+++ b/ཕིན་ལེནཌ་.mw
@@ -1,7 +1,32 @@
+{| border=1 align=right cellpadding=4 cellspacing=0 width=300 style="margin: 0 0 1em 1em; background: #f9f9f9; border: 1px #aaaaaa solid; border-collapse: collapse; font-size: 95%;"
+|+<big><big>'''''ཕིན་ལེནཌ''<br />''Suomi''<br />'''''</big></big>
+|-
+| style="background:#efefef;" align="center" colspan=2 |
+{| border="0" cellpadding="2" cellspacing="0"
+|-
+| align="center" width="140px" | [[File:Flag of Finland.svg|125px|]]
+| align="center" width="140px" | [[File:Coat of arms of Finland.svg|105px]]
+|}
+|-
+| align=center colspan=2 | [[File:Finland in European Union.svg|250px]]
+|}
 [[File:Location Finland EU Europe.png|right|thumb|250px|ཕིན་ལེནཌ་]]
 [[File:Flag of Finland.svg|right|thumb|]]
 [[File:Savonlinna heinäkuu 2002 IMG 1635.JPG|right|thumb]]
+
 '''ཕིན་ལེནཌ་'''
+
+
+
+
+
+
+* Commons:[https://commons.wikimedia.org/wiki/Category:Finland]
+
+
+
+
+
 
 
 
@@ -9,5 +34,6 @@
 
 {{stub}}
 
+[[Category:ཕིན་ལེནཌ|*]]
 [[Category:ཡོ་རོབ་གླིང་]]
 [[Category:རྒྱལ་ཁབ]]
