--- a/ཕིན་ལེནཌ.mw
+++ b/ཕིན་ལེནཌ.mw
@@ -1,21 +1,1 @@
-{| border=1 align=right cellpadding=4 cellspacing=0 width=300 style="margin: 0 0 1em 1em; background: #f9f9f9; border: 1px #aaaaaa solid; border-collapse: collapse; font-size: 95%;"
-|+<big><big>'''''ཕིན་ལེནཌ''<br />''Suomi''<br />'''''</big></big>
-|-
-| style="background:#efefef;" align="center" colspan=2 |
-{| border="0" cellpadding="2" cellspacing="0"
-|-
-| align="center" width="140px" | [[File:Flag of Finland.svg|125px|]]
-| align="center" width="140px" | [[File:Coat of arms of Finland.svg|105px]]
-|}
-|-
-| align=center colspan=2 | [[File:Finland in European Union.svg|250px]]
-|}
-'''ཕིན་ལེནཌ'''
-* Commons:[https://commons.wikimedia.org/wiki/Category:Finland]
-
-{{Europe}}
-
-{{stub}}
-
-[[Category:ཕིན་ལེནཌ|*]]
-[[Category:རྒྱལ་ཁབ]]
+#redirect [[ཕིན་ལེནཌ་]]
