--- a/བེ་ལ་རུ་སུ་.mw
+++ b/བེ་ལ་རུ་སུ་.mw
@@ -1,9 +1,28 @@
+{| border=1 align=right cellpadding=4 cellspacing=0 width=300 style="margin: 0 0 1em 1em; background: #f9f9f9; border: 1px #aaaaaa solid; border-collapse: collapse; font-size: 95%;"
+|+<big><big>'''''བེ་ལ་རུ་སུ ''<br />''Беларусь''<br />'''''</big></big>
+|-
+| style="background:#efefef;" align="center" colspan=2 |
+{| border="0" cellpadding="2" cellspacing="0"
+|-
+| align="center" width="140px" | [[File:Flag of Belarus.svg|125px|]]
+| align="center" width="140px" | [[File:Coat of arms of Belarus.svg|105px]]
+|}
+|-
+| align=center colspan=2 | [[File:Belarus in Europe.svg|250px]]
+|}
 [[File:Flag of Belarus.svg|right|150px]]
 [[File:Europe location BLR.png|200px]]
+
 '''བེ་ལ་རུ་སུ།'''
+
+
+
+
+* Commons:[https://commons.wikimedia.org/wiki/Category:Belarus]
 
 {{Europe}}
 
 {{stub}}
 
+[[Category:བེ་ལ་རུ་སུ |*]]
 [[Category:རྒྱལ་ཁབ]]
