*Empty MediaWiki Message*

--- a/ལི་ཐུ་ནི་ཡ.mw
+++ b/ལི་ཐུ་ནི་ཡ.mw
@@ -10,7 +10,19 @@
 |-
 | align=center colspan=2 | [[File:Lithuania in European Union.svg|250px]]
 |}
-'''ལི་ཐུ་ནི་ཡ'''
+'''ལི་ཐུ་ནི་ཡ'''  ༼ Lietuva ༽
+
+
+
+[[File:Flag of Lithuania.svg|right|150px]]
+[[File:Location Lithuania EU Europe.png|right|200px]]
+
+----
+* [[བིལ་ནི་ཡཱསི།]]
+
+
+
+
 * Commons:[https://commons.wikimedia.org/wiki/Category:Lithuania]
 
 {{Europe}}
@@ -19,3 +31,4 @@
 
 [[Category:ལི་ཐུ་ནི་ཡ|*]]
 [[Category:རྒྱལ་ཁབ]]
+[[Category:ཡུ་རོབ་]]
