Redirected page to [[ལི་ཐུ་ནི་ཡ]]

--- a/ལི་ཐུ་ནི་ཡ།.mw
+++ b/ལི་ཐུ་ནི་ཡ།.mw
@@ -1,13 +1,1 @@
-[[File:Flag of Lithuania.svg|right|150px]]
-[[File:Location Lithuania EU Europe.png|right|200px]]
-'''ལི་ཐུ་ནི་ཡ།''' ༼ Lietuva ༽
-
-----
-* [[བིལ་ནི་ཡཱསི།]]
-
-{{Europe}}
-
-{{stub}}
-
-[[Category:རྒྱལ་ཁབ]]
-[[Category:ཡུ་རོབ་]]
+#redirect [[ལི་ཐུ་ནི་ཡ]]
