Removed redirect to [[ཨིསི་ཊོ་ནི་ཡ།]]

--- a/ཨིསི་ཊོ་ནི་ཡ་.mw
+++ b/ཨིསི་ཊོ་ནི་ཡ་.mw
@@ -1,1 +1,14 @@
-#REDIRECT [[ཨིསི་ཊོ་ནི་ཡ།]]
+
+
+[[File:Flag of Estonia.svg|right|150px]]
+[[File:LocationEstonia.png|right|200px]]
+'''ཨིསི་ཊོ་ནི་ཡ།'''
+
+----
+* [[ཏ་ལིན།]]
+
+{{Europe}}
+
+{{stub}}
+
+[[Category:རྒྱལ་ཁབ]]
