--- a/ཨའིསི་ལེནཌ.mw
+++ b/ཨའིསི་ལེནཌ.mw
@@ -1,19 +1,12 @@
-{| border=1 align=right cellpadding=4 cellspacing=0 width=300 style="margin: 0 0 1em 1em; background: #f9f9f9; border: 1px #aaaaaa solid; border-collapse: collapse; font-size: 95%;"
-|+<big><big>'''''ཨའིསི་ལེནཌ''<br />''Ísland''<br />'''''</big></big>
-|-
-| style="background:#efefef;" align="center" colspan=2 |
-{| border="0" cellpadding="2" cellspacing="0"
-|-
-| align="center" width="140px" | [[File:Flag of Iceland.svg|125px|]]
-| align="center" width="140px" | [[File:Coat of arms of Iceland.svg|105px]]
-|}
-|-
-| align=center colspan=2 | [[File:Iceland in Europe.svg|250px]]
-|}
+
 '''ཨའིསི་ལེནཌ'''
+
+
+[[File:Europe-Iceland.svg|right|500px]]
+
 * Commons:[https://commons.wikimedia.org/wiki/%C3%8Dsland]
 
-{{Europe}}
+
 
 {{stub}}
 
