*Empty MediaWiki Message*

--- a/ཨའིསི་ལེནཌ.mw
+++ b/ཨའིསི་ལེནཌ.mw
@@ -4,6 +4,26 @@
 
 [[File:Europe-Iceland.svg|right|500px]]
 
+=={{Satellite images}}==
+<gallery>
+Image:Iceland sat cleaned.png|Combined satellite image of Iceland
+Image:Iceland satellite.jpg|NASA satellite image of Iceland
+Image:Satellite image of Iceland in September.jpeg|Iceland on [[September 9]] [[2002]]
+Image:Nasa image of iceland, faroes and hebrides.jpg|Iceland, the [[Faroe Islands|Faroes]] and [[:en:Hebrides|Hebrides]].
+Image:NASA_Photo_Grímsvötn_Nov._2004.jpg|Grímsvötn eruption Nov. 2004
+</gallery>
+
+=={{Maps}}==
+<gallery>
+Image:Map of Iceland.svg|A map of Iceland with major geographical features marked
+File:Iceland position144.png|Iceland between Scandinavia, British Islands, and Greenland
+Image:CIA Factbook map of Iceland.png|CIA Factbook map of Iceland
+Image:Kärtchen_von_Island.jpg|Historical map of Iceland (1888)
+Image:Iceland Mid-Atlantic Ridge Fig16.gif|Mid-Atlantic Rigde
+File:Abraham Ortelius-Islandia-ca 1590.jpg|Iceland in 1590, Ortelius
+</gallery>
+
+
 * Commons:[https://commons.wikimedia.org/wiki/%C3%8Dsland]
 
 
