*Empty MediaWiki Message*

--- a/ཨའིསི་ལེནཌ.mw
+++ b/ཨའིསི་ལེནཌ.mw
@@ -27,5 +27,5 @@ File:Abraham Ortelius-Islandia-ca 1590.jpg|Iceland in 1590, Ortelius
 {{translate}}
 {{stub}}
 
-[[Category:ཨའིསི་ལེནཌ|*]]
+[[Category:ཨའིསི་ལེནཌ་]]
 [[Category:རྒྱལ་ཁབ]]
