*Empty MediaWiki Message*

--- a/ཨའིསི་ལེནཌ་.mw
+++ b/ཨའིསི་ལེནཌ་.mw
@@ -12,8 +12,13 @@
 |}
 
 
-[[File:Flag of Iceland.svg|right|300px]]
-[[File:Grímsey Iceland.JPG|right|300px]]
+<gallery>
+Image:Iceland sat cleaned.png|[[ཨའིསི་ལེནཌ]]
+Image:Map of Iceland.svg|[[ཨའིསི་ལེནཌ]]
+Grímsey Iceland.JPG|right|300px
+</gallery>
+
+
 
 '''ཨའིསི་ལེནཌ་'''
 
