*Empty MediaWiki Message*

--- a/ཨའིསི་ལེནཌ་.mw
+++ b/ཨའིསི་ལེནཌ་.mw
@@ -12,20 +12,17 @@
 |}
 
 
-<gallery>
-Image:Iceland sat cleaned.png|[[ཨའིསི་ལེནཌ]]
-Image:Map of Iceland.svg|[[ཨའིསི་ལེནཌ]]
-Grímsey Iceland.JPG|right|300px
-</gallery>
-
-
-
 '''ཨའིསི་ལེནཌ་'''
 
 
 
 
 
+<gallery>
+Image:Iceland sat cleaned.png|[[ཨའིསི་ལེནཌ]]
+Image:Map of Iceland.svg|[[ཨའིསི་ལེནཌ]]
+Grímsey Iceland.JPG|
+</gallery>
 
 
 * Commons:[https://commons.wikimedia.org/wiki/%C3%8Dsland]
