--- a/འཛམ་གླིང་རྒྱལ་ཁབ་དག་གི་མིང་རྫོང་དབྱིན་རྒྱ་གསུམ་ཤན་བསྦྱར.mw
+++ b/འཛམ་གླིང་རྒྱལ་ཁབ་དག་གི་མིང་རྫོང་དབྱིན་རྒྱ་གསུམ་ཤན་བསྦྱར.mw
@@ -296,3 +296,13 @@
 = ཛ (Z) =
 * '''[[རྫམ་བྷི་ཡ།]]''' –རྫམ་བྷི་ཡ་སྤྱི་མཐུན་རྒྱལ་ཁབ་ Republic of Zambia 赞比亚共和国
 * '''[[རྫེམ་བྷ་ཝེ།]]''' –རྫེམ་བྷ་ཝེ་སྤྱི་མཐུན་རྒྱལ་ཁབ་  Republic of Zimbabwe 津巴布韦共和国
+
+
+
+
+
+
+
+
+
+[[Category:རྒྱལ་ཁབ|*]]
