*Empty MediaWiki Message*

--- a/ཨའིསི་ལེནཌ་.mw
+++ b/ཨའིསི་ལེནཌ་.mw
@@ -21,7 +21,7 @@
 <gallery>
 Image:Iceland sat cleaned.png|[[ཨའིསི་ལེནཌ]]
 Image:Map of Iceland.svg|[[ཨའིསི་ལེནཌ]]
-Grímsey Iceland.JPG|
+Image:Grímsey Iceland.JPG|
 </gallery>
 
 
