*Empty MediaWiki Message*

--- a/རྒྱ་མི.mw
+++ b/རྒྱ་མི.mw
@@ -1,5 +1,17 @@
 རྒྱ་མི / རྒྱ་ནག་གི་མི <!-- Chinese people -->
 
+
+
+<gallery>
+File:Ethnolinguistic map of China 1983.png
+File:汉族比例（2000年）.png
+File:Gu Hongzhong's Night Revels, Detail 1.jpg
+File:Boxer queue.JPG
+File:China.Terracotta statues007.jpg
+</gallery>
+
+
+
 ----
 * [[རྒྱ་ནག]]
 
