--- a/ཨེ་ཤར་ཡ.mw
+++ b/ཨེ་ཤར་ཡ.mw
@@ -121,7 +121,7 @@ The following is the list of all countries.
 * '''[[Hungary]]''' – Republic of Hungary
 
 === I ===
-* '''[[ཨའིསི་ལེནཌ]]''' – Republic of Iceland
+* '''[[ཨའིསི་ལེནཌ་]]''' – Republic of Iceland
 * '''[[རྒྱ་གར]]''' – Republic of India
 * '''[[Indonesia]]''' – Republic of Indonesia
 * '''[[ཨི་རཱན]]''' – Islamic Republic of Iran
