--- a/ཨེ་ཤར་ཡ.mw
+++ b/ཨེ་ཤར་ཡ.mw
@@ -100,7 +100,7 @@ The following is the list of all countries.
 === G ===
 * '''[[གྷེ་བྷོན]]''' – Gabonese Republic
 * '''[[གྷེམ་བི་ཡ]]''' – Republic of The Gambia
-* '''[[ཇཽ་ཇཱ]]''' – Republic of Georgia<ref>See also [[#A|Abkhazia]] and [[#S|South Ossetia]].</ref>
+* '''[[ཇཽ་ཇཱ]]''' – Republic of Georgia<ref>See also [[#ཨ|Abkhazia]] and [[#S|South Ossetia]].</ref>
 * '''[[ཇཱར་མ་ནི]]''' – Federal Republic of Germany
 * '''[[གྷ་ན]]''' – Republic of Ghana
 * [[Gibraltar]] (''UK overseas territory'')
