svg version ([[Commons:Commons:GlobalReplace|GlobalReplace v0.6.5]])

--- a/བཱེ་ནིན.mw
+++ b/བཱེ་ནིན.mw
@@ -1,6 +1,6 @@
 [[File:Coat of arms of Benin.svg|right|150px]]
 [[File:Flag of Benin.svg|right|200px]]
-[[File:LocationBenin.svg|right|200px]]
+[[File:Benin in its region.svg|right|200px]]
 '''བཱེ་ནིན།'''
 
 {{Africa}}
