--- a/བལ་ཡུལ་.mw
+++ b/བལ་ཡུལ་.mw
@@ -1,4 +1,4 @@
-[[File:Nepal in its region.svg|right|thumb|བལ་ཡུལ་]]
+isn't[[File:Nepal in its region.svg|right|thumb|བལ་ཡུལ་]]
 [[File:Flag of Nepal.svg|right|thumb]]
 '''བལ་ཡུལ་''' 
 
