--- a/ཀྲུང་ཀོ.mw
+++ b/ཀྲུང་ཀོ.mw
@@ -1,1 +1,3 @@
-ཀྲུང་ཀོ་ / རྒྱ་ནག་ – ཀྲུང་ཧྭ་མི་དམངས་སྤྱི་མཐུན་རྒྱལ་ཁབ People's Republic Of China 中国
+[[File:Flag of China.svg|right|150px]]
+
+'''ཀྲུང་ཀོ་ / རྒྱ་ནག་ '''– ཀྲུང་ཧྭ་མི་དམངས་སྤྱི་མཐུན་རྒྱལ་ཁབ People's Republic Of China 中华人民共和国
