--- a/ཀྲུང་ཀོ.mw
+++ b/ཀྲུང་ཀོ.mw
@@ -1,3 +1,5 @@
 [[File:Flag of China.svg|right|150px]]
 
+[[File:People's Republic of China (orthographic projection).svg |right|541px]]
+
 '''ཀྲུང་ཀོ་ / རྒྱ་ནག་ '''– ཀྲུང་ཧྭ་མི་དམངས་སྤྱི་མཐུན་རྒྱལ་ཁབ People's Republic Of China 中华人民共和国
