Replacing Coat_of_arms_of_Saudi_Arabia.svg with [[File:Emblem_of_Saudi_Arabia.svg]] (by [[:c:User:CommonsDelinker|CommonsDelinker]] because: [[:c:COM:FR|File renamed]]: [[:c:COM:FR#FR4|Criterion 4]] (harmonizing names of file set)).

--- a/སའུ་དི་ཨེ་ར་སྦི་ཡ་.mw
+++ b/སའུ་དི་ཨེ་ར་སྦི་ཡ་.mw
@@ -1,4 +1,4 @@
-[[File:Coat of arms of Saudi Arabia.svg|right|150px]]
+[[File:Emblem of Saudi Arabia.svg|right|150px]]
 [[File:Flag of Saudi Arabia.svg|right|200px]]
 [[File:Saudi Arabia in its region.svg |right|thumb|280px|སའུ་དི་ཨེ་ར་སྦི་ཡ་]]
 '''སའུ་དི་ཨེ་ར་སྦི་ཡ་''' 
