/* གསལ་བྱེད། */Music Story

--- a/བོད་སྐད།.mw
+++ b/བོད་སྐད།.mw
@@ -10,21 +10,21 @@
 
 {| cellpadding="8" style="font-size: large" 
 |- 
-|'''ཀ''' {{IPA|[ká]}} ||'''ཁ''' {{IPA|[kʰá]}}||'''ག''' {{IPA|[ɡà/kʰà]}}||'''ང''' {{IPA|[ŋà]}}
+|'''ཀ''' ka {{IPA|[ká/k’á]}} ||'''ཁ''' kha {{IPA|[kʰá/xá]}}||'''ག''' ga {{IPA|[ɡà/kʰà]}}||'''ང''' nga {{IPA|[ŋà]}}
 |-
-|'''ཅ''' {{IPA|[tɕá]}}||'''ཆ''' {{IPA|[tɕʰá]}}||'''ཇ''' {{IPA|[dʑà/tɕʰà]}}||'''ཉ''' {{IPA|[ɲà]}}
+|'''ཅ''' tsja {{IPA|[tɕá/tɕ’á]}}||'''ཆ''' tsjha {{IPA|[tɕʰá/ɹ̥̆˔ʲá]}}||'''ཇ''' dzja {{IPA|[dʑà/tɕʰà]}}||'''ཉ''' nja {{IPA|[ɲà]}}
 |-
-|'''ཏ''' {{IPA|[tá]}}||'''ཐ''' {{IPA|[tʰá]}}||'''ད''' {{IPA|[dà/tʰà]}}||'''ན''' {{IPA|[nà]}}
+|'''ཏ''' ta {{IPA|[tá/t’á]}}||'''ཐ''' tha {{IPA|[tʰá/ɹ̝̊á]}}||'''ད''' da {{IPA|[dà/tʰà]}}||'''ན''' na {{IPA|[nà]}}
 |-
-|'''པ''' {{IPA|[pá]}}||'''ཕ''' {{IPA|[pʰá]}}||'''བ''' {{IPA|[bà/pʰà]}}||'''མ''' {{IPA|[mà]}}
+|'''པ''' pa {{IPA|[pá/p’á]}}||'''ཕ''' pha {{IPA|[pʰá/ɸá]}}||'''བ''' ba {{IPA|[bà/pʰà]}}||'''མ''' ma {{IPA|[mà]}}
 |-
-|'''ཙ''' {{IPA|[tsá]}}||'''ཚ''' tsha {{IPA|[tsʰá]}}||'''ཛ''' dza {{IPA|[dzà/tsʰà]}}||'''ཝ''' {{IPA|[wà]}}
+|'''ཙ''' tsa {{IPA|[tsá/ts’á]}}||'''ཚ''' tsha {{IPA|[tsʰá/ɹ̥̆˔á]}}||'''ཛ''' dza {{IPA|[dzà/tsʰà]}}||'''ཝ''' wa {{IPA|[wà]}}
 |-
-|'''ཞ''' {{IPA|[ʑà/ɕà]}}||'''ཟ''' {{IPA|[zà/sà]}}||'''འ''' {{IPA|[ɦà/ʔà]}}||'''ཡ''' {{IPA|[jà]}}
+|'''ཞ''' zja {{IPA|[ʑà/ɕà]}}||'''ཟ''' za {{IPA|[zà/sà]}}||'''འ''' ‘a {{IPA|[ɦà/ʔà]}}||'''ཡ''' ja {{IPA|[jà]}}
 |-
-|'''ར''' {{IPA|[rà]}}||'''ལ''' {{IPA|[là]}}||'''ཤ''' {{IPA|[ɕá]}}||'''ས''' {{IPA|[sá]}}
+|'''ར''' ra {{IPA|[rà]}}||'''ལ''' la {{IPA|[là]}}||'''ཤ''' sja {{IPA|[ɕá]}}||'''ས''' sa {{IPA|[sá]}}
 |-
-|'''ཧ''' {{IPA|[há]}}||'''ཨ''' {{IPA|[ʔá]}}
+|'''ཧ''' ha {{IPA|[há]}}||'''ཨ''' ’a {{IPA|[ʔá]}}
 |}
 
 ==བོད་སྐད་ཀྱི་ཁྱབ་ཁོངས།==
