--- a/བོད་སྐད།.mw
+++ b/བོད་སྐད།.mw
@@ -10,17 +10,17 @@
 
 {| cellpadding="8" style="font-size: large" 
 |- 
-|'''ཀ''' ka {{IPA|[ká/k’á]}} ||'''ཁ''' kha {{IPA|[kʰá/xá]}}||'''ག''' ga {{IPA|[ɡà/kʰà]}}||'''ང''' nga {{IPA|[ŋà]}}
+|'''ཀ''' ka {{IPA|[ká/k’á]}} ||'''ཁ''' kha {{IPA|[kʰá/xá]}}||'''ག''' ga {{IPA|[ɡà/ɣà]}}||'''ང''' nga {{IPA|[ŋà]}}
 |-
-|'''ཅ''' tsja {{IPA|[tɕá/tɕ’á]}}||'''ཆ''' tsjha {{IPA|[tɕʰá/ɹ̥̆˔ʲá]}}||'''ཇ''' dzja {{IPA|[dʑà/tɕʰà]}}||'''ཉ''' nja {{IPA|[ɲà]}}
+|'''ཅ''' tsja {{IPA|[tɕá/tɕ’á]}}||'''ཆ''' tsjha {{IPA|[tɕʰá/ɹ̥̆˔ʲá]}}||'''ཇ''' dzja {{IPA|[dʑà/ɹ̝̆ʲà]}}||'''ཉ''' nja {{IPA|[ɲà]}}
 |-
-|'''ཏ''' ta {{IPA|[tá/t’á]}}||'''ཐ''' tha {{IPA|[tʰá/ɹ̝̊á]}}||'''ད''' da {{IPA|[dà/tʰà]}}||'''ན''' na {{IPA|[nà]}}
+|'''ཏ''' ta {{IPA|[tá/t’á]}}||'''ཐ''' tha {{IPA|[tʰá/ɹ̝̊á]}}||'''ད''' da {{IPA|[dà/ɹ̝à]}}||'''ན''' na {{IPA|[nà]}}
 |-
-|'''པ''' pa {{IPA|[pá/p’á]}}||'''ཕ''' pha {{IPA|[pʰá/ɸá]}}||'''བ''' ba {{IPA|[bà/pʰà]}}||'''མ''' ma {{IPA|[mà]}}
+|'''པ''' pa {{IPA|[pá/p’á]}}||'''ཕ''' pha {{IPA|[pʰá/ɸá]}}||'''བ''' ba {{IPA|[bà/βà]}}||'''མ''' ma {{IPA|[mà]}}
 |-
-|'''ཙ''' tsa {{IPA|[tsá/ts’á]}}||'''ཚ''' tsha {{IPA|[tsʰá/ɹ̥̆˔á]}}||'''ཛ''' dza {{IPA|[dzà/tsʰà]}}||'''ཝ''' wa {{IPA|[wà]}}
+|'''ཙ''' tsa {{IPA|[tsá/ts’á]}}||'''ཚ''' tsha {{IPA|[tsʰá/ɹ̥̆˔á]}}||'''ཛ''' dza {{IPA|[dzà/ɹ̝̆à]}}||'''ཝ''' wa {{IPA|[wà]}}
 |-
-|'''ཞ''' zja {{IPA|[ʑà/ɕà]}}||'''ཟ''' za {{IPA|[zà/sà]}}||'''འ''' ‘a {{IPA|[ɦà/ʔà]}}||'''ཡ''' ja {{IPA|[jà]}}
+|'''ཞ''' zja {{IPA|[ʑà/ʑːà]}}||'''ཟ''' za {{IPA|[zà/zːà]}}||'''འ''' ‘a {{IPA|[ɦà/ɦːà]}}||'''ཡ''' ja {{IPA|[jà]}}
 |-
 |'''ར''' ra {{IPA|[rà]}}||'''ལ''' la {{IPA|[là]}}||'''ཤ''' sja {{IPA|[ɕá]}}||'''ས''' sa {{IPA|[sá]}}
 |-
