Undo revision 27024 by [[Special:Contributions/2A00:23C5:1782:CA01:8CF8:7D58:B2D9:E827|2A00:23C5:1782:CA01:8CF8:7D58:B2D9:E827]] ([[User talk:2A00:23C5:1782:CA01:8CF8:7D58:B2D9:E827|talk]])

--- a/ཧྥ་རན་ས་ཀྱི་དར་ཆ།.mw
+++ b/ཧྥ་རན་ས་ཀྱི་དར་ཆ།.mw
@@ -12,4 +12,9 @@
 
 * [[འབྲུག་ཡུལ་]]
 
-Yk
+== འབྲེལ་མཐུད། ==
+* http://www.bhutan.gov.bt/government/abt_nationalflag.php
+
+{{stub}}
+
+[[Category:འབྲུག་ཡུལ་]]
