*Empty MediaWiki Message*

--- a/བོད།.mw
+++ b/བོད།.mw
@@ -1,6 +1,6 @@
 {{translate}}
 
-[[File:Tibet in China (undisputed + other de-facto hatched) (+all claims hatched).svg|thumb|]]
+[[File:Tibet in China (claimed hatched) (+all claims hatched).svg|thumb|]]
 བོད་དམ་ཡང་ན་བོད་ཡུལ་ནི་སྟོད་མངའ་རིས་སྐོར་གསུམ་དང་བར་དབུས་གཙང་རུ་བཞི། སྨད་མདོ་ཁམས་སྒང་དྲུག་བཅས་ལ་གོ། ད་ལྟའི་ཆར་བོད་ཅེས་པར་ཆབ་སྲིད་ཀྱི་གོ་བ་དང་མི་རིགས་ཀྱི་གོ་བ་གཉིས་ལེན་གྱི་ཡོད་པ་རེད། སྔ་མ་ནི་རྒྱ་ནག་གིས་བགོས་པའི་བོད་རང་
 
 
