*Empty MediaWiki Message*

--- a/མ་ཤོག།.mw
+++ b/མ་ཤོག།.mw
@@ -1,6 +1,6 @@
 __NOTOC__
 __NOTOC__
-<===  {{Banner}}   ===>
+<!--  {{Banner}}   -->
 {|border="1" width="100%"
 |[[File:Emblem_of_Bhutan.svg|right|100px|རྒྱལ་ཡོངས་ ལས་རྟགས།]][[File:Flag_of_Bhutan.svg|left|100px|རྒྱལ་དར།]]རྫོང་ཁའི་ཝེ་ཁེ་རིག་མཛོད་དུ་བྱོན་པ་ལེགས་! 
 གལ་ཏེ་ཁྱེད་ཀྱིས་ཤོག་ངོས་འདིར་རྫོང་ཁ་ལ་ལྟ་མི་ཐུབ་ན་ [http://www.babelstone.co.uk/Test/Tibetan.html Tibetan Unicode script] ཕབ་ལེན་བྱེད་དགོས།
