--- a/འཛམ་གླིང་རྒྱལ་ཁབ་དག་གི་མིང་རྫོང་དབྱིན་རྒྱ་གསུམ་ཤན་བསྦྱར.mw
+++ b/འཛམ་གླིང་རྒྱལ་ཁབ་དག་གི་མིང་རྫོང་དབྱིན་རྒྱ་གསུམ་ཤན་བསྦྱར.mw
@@ -253,6 +253,7 @@
 
 = ཏ (T) =
 * '''[[ཐ་ཇི་ཁེ་སི་ཏན]]''' – ཐ་ཇི་ཁེ་སི་ཏན་སྤྱི་མཐུན་རྒྱལ་ཁབ Republic of Tajikistan 塔吉克斯坦共和国
+* '''[[ཏའི་ཝཱན་]]''' – Republic of China.
 * '''[[ཏན་ཛ་ནི་ཡ]]''' – ཏན་ཛ་ནི་ཡ་གཅིག་སྡུད་སྤྱི་མཐུན་རྒྱལ་ཁབ United Republic of Tanzania 坦桑尼亚联合共和国
 * '''[[གསེར་ལྡན་རྒྱལ་ཁབ་]]''' – གསེར་ལྡན་རྒྱལ་གཞིས་རྒྱལ་ཁབ Kingdom of Thailand་泰王国
 * '''[[ཤར་ཊི་མོར]]''''- ཤར་ཊི་མོར Timor-Leste་东帝汶
