--- a/འཛམ་གླིང་རྒྱལ་ཁབ་དག་གི་མིང་རྫོང་དབྱིན་རྒྱ་གསུམ་ཤན་བསྦྱར.mw
+++ b/འཛམ་གླིང་རྒྱལ་ཁབ་དག་གི་མིང་རྫོང་དབྱིན་རྒྱ་གསུམ་ཤན་བསྦྱར.mw
@@ -168,7 +168,7 @@
 * '''[[མོན་ཚུ་ར་ཊི་]]''' –  མོན་ཚུ་ར་ཊི དབྱིན་ཇིའི་རྒྱལ་ཁོངས Montserrat 蒙塞拉特
 * '''[[མོ་རོ་ཁོ་]]''' – མོ་རོ་ཁོ་རྒྱལ་གཞིས་རྒྱལ་ཁབ Kingdom of Morocco 摩洛哥王国
 * '''[[མོ་སམ་བྷི་ཁུ་]]''' – མོ་སམ་བྷི་ཁུ་སྤྱི་མཐུན་རྒྱལ་ཁབ Republic of Mozambique 莫桑比克共和国
-* '''[[འབར་མ་ / མེན་མཱར་]]''' – འབར་མ་མནའ་འབྲེལ་རྒྱལ་ཁབ Union of Myanmar (Burma)缅甸联邦共和国
+* '''[[འབར་མ་]] / [[མེན་མཱར་]]''' – འབར་མ་མནའ་འབྲེལ་རྒྱལ་ཁབ Union of Myanmar (Burma)缅甸联邦共和国
 
 = ན (N) =
 * '''[[ན་མི་བྷི་ཡ་]]''' – ན་མི་བྷི་ཡ་སྤྱི་མཐུན་རྒྱལ་ཁབ Republic of Namibia 纳米比亚共和国
