--- a/ཨེ་ཤར་ཡ.mw
+++ b/ཨེ་ཤར་ཡ.mw
@@ -163,7 +163,7 @@ The following is the list of all countries.
 * '''[[Macedonia]]''' – Republic of Macedonia<ref>Also known as the former Yugoslav Republic of Macedonia.</ref>
 * '''[[Madagascar]]''' – Republic of Madagascar
 * '''[[Malawi]]''' – Republic of Malawi
-* '''[[མ་ལེ་ཤི་ཡ]]'''
+* '''[[མ་ལེ་ཤི་ཡ]]''' – Malaysia
 * '''[[Maldives]]''' – Republic of Maldives
 * '''[[Mali]]''' – Republic of Mali
 * '''[[Malta]]''' – Republic of Malta
