--- a/ལི་ཐུ་ནི་ཡ.mw
+++ b/ལི་ཐུ་ནི་ཡ.mw
@@ -1,35 +1,1 @@
-{| border=1 align=right cellpadding=4 cellspacing=0 width=300 style="margin: 0 0 1em 1em; background: #f9f9f9; border: 1px #aaaaaa solid; border-collapse: collapse; font-size: 95%;"
-|+<big><big>'''''ལི་ཐུ་ནི་ཡ''<br />''Lietuva''<br />'''''</big></big>
-|-
-| style="background:#efefef;" align="center" colspan=2 |
-{| border="0" cellpadding="2" cellspacing="0"
-|-
-| align="center" width="140px" | [[File:Flag of Lithuania.svg|125px|]]
-| align="center" width="140px" | [[File:Coat of Arms of Lithuania.svg|105px]]
-|}
-|-
-| align=center colspan=2 | [[File:Lithuania in European Union.svg|250px]]
-|}
-'''ལི་ཐུ་ནི་ཡ'''  ༼ Lietuva ༽
-
-
-
-[[File:Flag of Lithuania.svg|right|150px]]
-[[File:Location Lithuania EU Europe.png|right|200px]]
-
-----
-* [[བིལ་ནི་ཡཱསི།]]
-
-
-
-
-* Commons:[https://commons.wikimedia.org/wiki/Category:Lithuania]
-
-{{Europe}}
-
-{{stub}}
-
-[[Category:ལི་ཐུ་ནི་ཡ|*]]
-[[Category:ཡོ་རོབ་གླིང་]]
-[[Category:རྒྱལ་ཁབ]]
-[[Category:ཡུ་རོབ་]]
+#redirect [[ལི་ཐུ་ནི་ཡ།]]
