--- a/ཨེ་ཤར་ཡ.mw
+++ b/ཨེ་ཤར་ཡ.mw
@@ -141,9 +141,9 @@ The following is the list of all countries.
 * '''[[Kazakhstan]]''' – Republic of Kazakhstan
 * '''[[ཀེ་ནི་ཡ]]''' – Republic of Kenya
 * '''[[Kiribati]]''' – Republic of Kiribati
-* '''[[North Korea]]''' – ཀོ་རི་ཡ། མི་སེར་དམངས་གཙོའི་རྒྱལ་ཁབ།.
-* '''[[ལྷོ་ཀོ་རི་ཡ]]''' – Republic of Korea.
-* '''''[[Kosovo]]''''' – Republic of Kosovo.
+* '''[[North Korea]]''' – ཀོ་རི་ཡ། མི་སེར་དམངས་གཙོའི་རྒྱལ་ཁབ།
+* '''[[ལྷོ་ཀོ་རི་ཡ]]''' – Republic of Korea
+* '''''[[Kosovo]]''''' – Republic of Kosovo
 * '''[[ཀུ་ཝེཊ]]''' – State of Kuwait
 * '''[[Kyrgyzstan]]''' – Kyrgyz Republic<ref>[[Kyrgyzstan]] is also sometimes rendered as Kirghizia.</ref>
 
