--- a/འཛམ་གླིང་རྒྱལ་ཁབ་དག་གི་མིང་རྫོང་དབྱིན་རྒྱ་གསུམ་ཤན་བསྦྱར.mw
+++ b/འཛམ་གླིང་རྒྱལ་ཁབ་དག་གི་མིང་རྫོང་དབྱིན་རྒྱ་གསུམ་ཤན་བསྦྱར.mw
@@ -132,6 +132,8 @@
 * '''[[ཧ་སག་]]''' – ཧ་སག་སྤྱི་མཐུན་རྒྱལ་ཁབ Republic of Kazakhstan 哈萨克斯坦共和国
 * '''[[ཁེན་ཡ་]]''' – ཁེན་ཡ་སྤྱི་མཐུན་རྒྱལ་ཁབ་ Republic of Kenya 肯尼亚共和国
 * '''[[ཀི་རི་བྷ་ཏི་]]''' – ཀི་རི་བྷ་ཏི་སྤྱི་མཐུན་རྒྱལ་ཁབ Republic of Kiribati 基里巴斯共和国
+* '''[[བྱང་ཀོ་རི་ཡ་]]''' – ཀོ་རི་ཡ། མི་སེར་དམངས་གཙོའི་རྒྱལ་ཁབ།   North Korea
+* '''[[ལྷོ་ཀོ་རི་ཡ]]''' – Republic of Korea
 * '''[[ཁོ་སོ་ཝོ་]]''' – ཁོ་སོ་ཝོ་སྤྱི་མཐུན་རྒྱལ་ཁབ Republic of Kosovo 科索沃共和国
 * '''[[ཁི་ཝེ་ཏ་]]''' –  ཁི་ཝེ་ཏ་ State of Kuwait 科威特
 * '''[[ཁུར་དགེ་སུ་ཏན་]]''' – ཁུར་དགེ་སུ་ཏན་སྤྱི་མཐུན་རྒྱལ་ཁབ Kyrgyzstan Republic 吉尔吉斯斯坦共和国
