--- a/ཨེ་ཤར་ཡ.mw
+++ b/ཨེ་ཤར་ཡ.mw
@@ -141,7 +141,7 @@ The following is the list of all countries.
 * '''[[Kazakhstan]]''' – Republic of Kazakhstan
 * '''[[ཀེ་ནི་ཡ]]''' – Republic of Kenya
 * '''[[Kiribati]]''' – Republic of Kiribati
-* '''[[North Korea]]''' – ཀོ་རི་ཡ། མི་སེར་དམངས་གཙོའི་རྒྱལ་ཁབ།
+* '''[[བྱང་ཀོ་རི་ཡ་]]''' – ཀོ་རི་ཡ། མི་སེར་དམངས་གཙོའི་རྒྱལ་ཁབ།   North Korea
 * '''[[ལྷོ་ཀོ་རི་ཡ]]''' – Republic of Korea
 * '''''[[Kosovo]]''''' – Republic of Kosovo
 * '''[[ཀུ་ཝེཊ]]''' – State of Kuwait
