--- a/ཨེ་ཤར་ཡ.mw
+++ b/ཨེ་ཤར་ཡ.mw
@@ -302,7 +302,7 @@ The following is the list of all countries.
 
 === Z ===
 * '''[[Zambia]]''' – Republic of Zambia
-* '''[[Zimbabwe]]''' – Republic of Zimbabwe
+* '''[[ཛིམ་བབ་ཝེ་]]''' – Republic of Zimbabwe
 
 == Headline text ==
 {{reflist}}
