--- a/ཨེ་ཤར་ཡ.mw
+++ b/ཨེ་ཤར་ཡ.mw
@@ -287,7 +287,7 @@ The following is the list of all countries.
 
 === V ===
 * '''[[Vanuatu]]''' – Republic of Vanuatu
-* '''[[Vatican City]]''' – State of the Vatican City.
+* '''[[བ་ཊི་ཀཱན་]]''' – State of the Vatican City.
 * '''[[Venezuela]]''' – Bolivarian Republic of Venezuela
 * '''[[Vietnam]]''' – Socialist Republic of Vietnam
 * [[British Virgin Islands|Virgin Islands, British]] – British Virgin Islands (''UK overseas territory'')
