--- a/ཨེ་ཤར་ཡ.mw
+++ b/ཨེ་ཤར་ཡ.mw
@@ -279,11 +279,11 @@ The following is the list of all countries.
 === U ===
 * '''[[Uganda]]''' – Republic of Uganda
 * '''[[Ukraine]]'''
-* '''[[United Arab Emirates]]'''
+* '''[[ཡུ་ནའི་ཊེཊ་ཨ་རབ་ཨེ་མི་རེཊསི་]]''' – United Arab Emirates
 * '''[[ཡུ་ནའི་ཊེཊ་ཀིང་ཌམ]]''' – United Kingdom of Great Britain and Northern Ireland
 * '''[[ཡུ་ནའིཊེཊ་སི་ཊེས]]''' – United States of America
 * '''[[Uruguay]]''' – Eastern Republic of Uruguay
-* '''[[Uzbekistan]]''' – Republic of Uzbekistan
+* '''[[ཨུཛ་བེ་ཀིསི་ཏཱན་]]''' – Republic of Uzbekistan
 
 === V ===
 * '''[[Vanuatu]]''' – Republic of Vanuatu
