--- a/ཨེ་ཤར་ཡ.mw
+++ b/ཨེ་ཤར་ཡ.mw
@@ -260,10 +260,10 @@ The following is the list of all countries.
 * '''[[Syria]]''' – Syrian Arab Republic
 
 === T ===
-* '''''[[Taiwan]]''''' – Republic of China.
-* '''[[Tajikistan]]''' – Republic of Tajikistan
+* '''[[ཏའི་ཝཱན་]]''' – Republic of China (Taiwan)
+* '''[[ཏ་ཇག་ཀིསི་ཏཱན་]]''' – Republic of Tajikistan
 * '''[[Tanzania]]''' – United Republic of Tanzania
-* '''[[Thailand]]''' – Kingdom of Thailand
+* '''[[ཐཱའི་ལེནཌ་]]''' – Kingdom of Thailand
 * '''[[Togo]]''' – Togolese Republic
 * [[Tokelau]] (''Overseas territory of New Zealand'')
 * '''[[Tonga]]''' – Kingdom of Tonga
@@ -271,7 +271,7 @@ The following is the list of all countries.
 * '''[[Trinidad and Tobago]]''' – Republic of Trinidad and Tobago
 * [[Tristan da Cunha]] (''Dependency of the UK overseas territory of Saint Helena'')
 * '''[[Tunisia]]''' – Tunisian Republic
-* '''[[Turkey]]''' – Republic of Turkey
+* '''[[བྱའི་རིགས་ཅིག]]''' – Republic of Turkey
 * '''[[Turkmenistan]]'''
 * [[Turks and Caicos Islands]] (''UK overseas territory'')
 * '''[[Tuvalu]]'''
