--- a/ཨེ་ཤར་ཡ.mw
+++ b/ཨེ་ཤར་ཡ.mw
@@ -133,7 +133,7 @@ The following is the list of all countries.
 
 === J ===
 * '''[[ཇ་མའི་ཀ]]'''
-* '''[[ཇ་པཱན]]'''
+* '''[[ཇ་པཱན]]''' - State of Japan
 * [[ཇར་སི]] – Bailiwick of Jersey (''British Crown dependency'')
 * '''[[ཇོར་ཌན]]''' – Hashemite Kingdom of Jordan
 
