--- a/འཛམ་གླིང་རྒྱལ་ཁབ་དག་གི་མིང་རྫོང་དབྱིན་རྒྱ་གསུམ་ཤན་བསྦྱར.mw
+++ b/འཛམ་གླིང་རྒྱལ་ཁབ་དག་གི་མིང་རྫོང་དབྱིན་རྒྱ་གསུམ་ཤན་བསྦྱར.mw
@@ -95,7 +95,7 @@
 * '''[[དགའ་བྷོན་]]''' – Gabon, དགའ་བྷོན་སྤྱིན་མཐུན་རྒྱལ་ཁབ་ Gabonese Republic 加蓬共和国
 * '''[[སྒམ་བྷེ་ཡ་]]''' – སྒམ་བྷེ་ཡ་སྤྱི་མཐུན་རྒྱལ་ཁབ Republic of The Gambia 冈比亚共和国
 * '''[[དགའ་བྷོན་]]''' – Gabon དགའ་བྷོན་སྤྱི་མཐུན་རྒྱལ་ཁབ་  The Gabonese Republic 加蓬共和国
-* '''[[ལྗོར་ཇི་ཡ་]]'''-  ལྗོར་ཇི་ཡ་ Goergia  即格鲁吉亚
+* '''[[ལྗོར་ཇི་ཡ་]]'''-  ལྗོར་ཇི་ཡ་ Georgia  即格鲁吉亚
 * '''[[འཇར་མན་]]''' – འཇར་མན་མནའ་འབྲེལ་སྤྱི་མཐུན་རྒྱལ་ཁབ Federal Republic of German 德国
 * '''[[དགའ་ན་]]''' – དགའ་ན་ Ghana དགའ་ན་སྤྱི་མཐུན་རྒྱལ་ཁབ  The Republic of Ghana 加纳共和国
 * '''[[གྷི་རིག་]]''' – གྷི་རིག་སྤྱི་མཐུན་རྒྱལ་ཁབ / ཀེ་རི་སི་སྤྱི་མཐུན་རྒྱལ་ཁབ Greece, Hellenic Republic 希腊共和国
