--- a/ཨེ་ཤར་ཡ.mw
+++ b/ཨེ་ཤར་ཡ.mw
@@ -71,7 +71,7 @@ The following is the list of all countries.
 * '''[[ཀུརོ་ཤི་ཡ]]''' – Republic of Croatia
 * '''[[ཀིའུ་སྦ]]''' – Republic of Cuba
 * '''[[Cyprus]]''' – Republic of Cyprus<ref>See also [[#N|Northern Cyprus]].</ref>
-* '''[[Czech Republic]]'''.
+* '''[[ཅེཀ་རི་པབ་ལིཀ་]]''' – Czech Republic.
 
 === D ===
 * '''[[ཌེན་མཱཀ]]''' – Kingdom of Denmark
