--- a/འཛམ་གླིང་རྒྱལ་ཁབ་དག་གི་མིང་རྫོང་དབྱིན་རྒྱ་གསུམ་ཤན་བསྦྱར.mw
+++ b/འཛམ་གླིང་རྒྱལ་ཁབ་དག་གི་མིང་རྫོང་དབྱིན་རྒྱ་གསུམ་ཤན་བསྦྱར.mw
@@ -53,7 +53,7 @@
 * '''[[ཁེ་མུན་གླིང་ཚོམ་]]'''– ཁེ་མུན་གླིང་ཚོམ་  དབྱིན་ཇིའི་རྒྱལ་ཁོངས  Cayman islands 开曼群岛
 * '''[[ཆ་ཌ་]]''' – ཆ་ཌ་སྤྱི་མཐུན་རྒྱལ་ཁབ Republic of Chad 乍得 
 * '''[[ཅི་ལེ་]]''' – ཅི་ལི་སྤྱི་མཐུན་རྒྱལ་ཁབ Republic of Chile 智利 
-* '''[[ཀྲུང་ཀོ་  /  རྒྱ་ནག་]] ''' – ཀྲུང་ཧྭ་མི་དམངས་སྤྱི་མཐུན་རྒྱལ་ཁབ People's Republic Of China 中国
+* '''[[ཀྲུང་ཀོ་]] / [[རྒྱ་ནག་]] ''' – ཀྲུང་ཧྭ་མི་དམངས་སྤྱི་མཐུན་རྒྱལ་ཁབ People's Republic Of China 中国
 * '''[[ཁེ་ལེབ་ཕུ་ཏེན་གླིང་ཕྲན་]]'''– ཁེ་ལེབ་ཏེན་གླིང་འཕྲན་  ཧྥ་རན་སིའི་རྒྱལ་ཁོངས Clipperton Island 
 * '''[[ཁོ་ལོམ་བྷི་ཡ་]]'''– ཁོ་ལོམ་བྷི་་ཡ་སྤྱི་མཐུན་རྒྱལ་ཁབ Republic of Colombia 哥伦比亚
 * '''[[ཁོ་མོ་རོ་སུ་]]'''– ཁོ་མོ་རོ་སུ་གཅིག་བསྒྲིལ་གླིང་འཕྲན་རྒྱལ་ཁབ Union of the Comoros 摩洛哥
@@ -66,7 +66,7 @@
 * '''[[ཁི་རག་ཏེ་ཡ་]]''' – ཁི་རག་ཏེ་ཡ་སྤྱི་མཐུན་རྒྱལ་ཁབ Republic of Croatia 克罗地亚
 * '''[[ཁོས་བྷ་]]''' – ཁོས་བྷ་སྤྱི་མཐུན་རྒྱལ་ཁབ Republic of Cuba 古巴
 * '''[[སེབ་རུ་སི་]]''' – སེབ་རུ་སི་སྤྱི་མཐུན་རྒྱལ་ཁབ  Republic of Cyprus 塞浦路斯
-* '''[[ཆེ་ཥི་]]''' – ཆེ་ཥི་སྤྱི་མཐུན་རྒྱལ་ཁབ Czech Republicn.	捷克
+* '''[[ཆེ་ཥི་]]''' – ཆེ་ཥི་སྤྱི་མཐུན་རྒྱལ་ཁབ Czech Republic 捷克
 
 = ཌ (D) =
 * '''[[ཌན་མར་ཀི་]]''' – ཌན་མར་ཀི་རྒྱལ་གཞིས་རྒྱལ་ཁབ Kingdom of Denmark 丹麦
