--- a/ཨེ་ཤར་ཡ.mw
+++ b/ཨེ་ཤར་ཡ.mw
@@ -52,7 +52,7 @@ The following is the list of all countries.
 === C ===
 * '''[[Cambodia]]''' – Kingdom of Cambodia
 * '''[[Cameroon]]''' – Republic of Cameroon
-* '''[[ཀེ་ན་ཌ]]'''
+* '''[[ཀེ་ན་ཌ]]''' – Canada
 * '''[[Cape Verde]]''' – Republic of Cape Verde
 * [[Cayman Islands]] (''UK overseas territory'')
 * '''[[Central African Republic]]'''
