--- a/ཨེ་ཤར་ཡ.mw
+++ b/ཨེ་ཤར་ཡ.mw
@@ -50,7 +50,7 @@ The following is the list of all countries.
 * '''[[བྷུ་རུན་ཌི]]''' – Republic of Burundi
 
 === C ===
-* '''[[Cambodia]]''' – Kingdom of Cambodia
+* '''[[ཀམ་བོ་ཌི་ཡ་]]''' – Kingdom of Cambodia
 * '''[[Cameroon]]''' – Republic of Cameroon
 * '''[[ཀེ་ན་ཌ]]''' – Canada
 * '''[[Cape Verde]]''' – Republic of Cape Verde
