--- a/མན་ཅི་ཀེའི་ར་རི་རྒྱུད་.mw
+++ b/མན་ཅི་ཀེའི་ར་རི་རྒྱུད་.mw
@@ -68,4 +68,4 @@ file:Itajuba-slideshow-01.jpg|ཨི་ཏ་ཞུ་བ་
 *[http://www.terrasdamantiqueira.com/serradamantiqueira.htm མན་ཅི་ཀེའི་རའི་གནས་ཚུལ།༼པོར་ཐུ་གལ་ཁ༽]
 
 
-[[Category:]]
+[[Category:འཛམ་གླིང་རྒྱས་བཤད]]
