*Empty MediaWiki Message*

--- a/བྲ་ཛིལ་ཀྱི་ས་ཁ་མཐོ་ས་.mw
+++ b/བྲ་ཛིལ་ཀྱི་ས་ཁ་མཐོ་ས་.mw
@@ -12,5 +12,10 @@ File:Serra do mar ubatuba.jpg|[[སེར་ར་དོ་མར་རི་ར
 *[[བྲ་ཛིལ་]]
 
 
+
+
+
+{{translate}}
+
 [[Category:བཱརཱ་ཛིལ་]]
 [[Category:འཛམ་གླིང་རྒྱས་བཤད]]
