--- a/པེ་དྲ་ད་མི་ན་རྩེ་.mw
+++ b/པེ་དྲ་ད་མི་ན་རྩེ་.mw
@@ -8,3 +8,14 @@
 *[[མན་ཅི་ཀེའི་ར་རི་རྒྱུད་]]
 *[[བྲ་ཛིལ་ཀྱི་ས་ཁ་མཐོ་ས་]]
 *[[བྲ་ཛིལ་]]
+
+
+
+
+
+
+
+{{translate}}
+
+[[Category:འཛམ་གླིང་རྒྱས་བཤད]]
+[[Category:བཱརཱ་ཛིལ་]]
