*Empty MediaWiki Message*

--- a/རིའོ་དེ་ཞ་ནེའི་རོ་.mw
+++ b/རིའོ་དེ་ཞ་ནེའི་རོ་.mw
@@ -1,9 +1,14 @@
-{{Translate}}
+
 
 [[File:Montagem Rio de Janeiro.jpg|thumb|རིའོ་དེ་ཞ་ནེའི་རོ་]]
 
 '''རིའོ་དེ་ཞ་ནེའི་རོ་''', [[བཱརཱ་ཛིལ་]]།
 
-[[Category:གྲོང་􀮣]]
+
+
 
 {{Stub}}
+{{Translate}}
+
+[[Category:བཱརཱ་ཛིལ་]]
+[[Category:གྲོང་􀮣]]
