*Empty MediaWiki Message*

--- a/ཨེ་ཤར་ཡ.mw
+++ b/ཨེ་ཤར་ཡ.mw
@@ -5,7 +5,8 @@ __NOTOC__
 The following is the list of all countries.
 <nowiki>*</nowiki> - states without general international recognition.
 
-List of countries
+'''List of countries'''
+
 
 == རྒྱལ་ཁབབི་ ཐོ། ཐོ་ཡིག ==
 [[འཛམ་གླིང་རྒྱལ་ཁབ་དག་གི་མིང་རྫོང་དབྱིན་རྒྱ་གསུམ་ཤན་བསྦྱར]]
