*Empty MediaWiki Message*

--- a/འཇར་པན།.mw
+++ b/འཇར་པན།.mw
@@ -1,5 +1,5 @@
-འདི་ལ་ཉི་ཧོང་ཡང་ཟེར། དབྱིན་ཇིའི་སྐད་དུ་ Japan
-
+འདི་ལ་ཉི་ཧོང་ཡང་ཟེར། དབྱིན་ཇིའི་སྐད་དུ་ Japan    [[ཇ་པཱན]]
+ 
 == ཁོར་ཡུག ==
 == མགྲོན་ཁང་། ==
 == ལོ་རྒྱུས། ==
