--- a/ཨེ་ཤར་ཡ.mw
+++ b/ཨེ་ཤར་ཡ.mw
@@ -155,7 +155,7 @@ The following is the list of all countries.
 === L ===
 * '''[[Laos]]''' – Lao People's Democratic Republic
 * '''[[ལེཊི་བི་ཡ]]''' – Republic of Latvia
-* '''[[Lebanon]]''' – Republic of Lebanon
+* '''[[ལེ་བཱ་ནཱོན་]]''' – Republic of Lebanon
 * '''[[Lesotho]]''' – Kingdom of Lesotho
 * '''[[Liberia]]''' – Republic of Liberia
 * '''[[Libya]]''' – Great Socialist People's Libyan Arab Jamahiriya
