--- a/ཨེ་ཤར་ཡ.mw
+++ b/ཨེ་ཤར་ཡ.mw
@@ -29,7 +29,7 @@ The following is the list of all countries.
 * '''[[ཨར་ཇེན་ཊི་ན]]''' – ཨར་ཇེན་ཊི་ནི་ མི་སེར་རྒྱལ་ཁབ། (Spanish: ''República Argentina'')
 * '''[[ཨར་མི་ནི་ཡ]]''' – ཨར་མི་ནིཡི་ མི་སེར་རྒྱལ་ཁབ། (Armenian: ''Հայաստանի Հանրապետություն'' - ''Hayastani Hanrapetut’yun'')
 * [[ཨ་རུ་བ]] (''Self-governing country in the Kingdom of the Netherlands'')
-* [[United Kingdom]] [[Ascension Island]] ([[ཡུ་ནའི་ཊེཊ་ཀིང་ཌམ]]) ([[ཨིང་ལིཤ། དབྱིན་སྐད|ཨིང་ལིཤ། དབྱིན་སྐད།]]: ''Ascension Island'')
+* United Kingdom Ascension Island (Dependency of the UK overseas territory of Saint Helena) ([[ཨིང་ལིཤ། དབྱིན་སྐད|ཨིང་ལིཤ། དབྱིན་སྐད།]]: ''Ascension Island'')
 * '''[[ཨས་ཊེཡེ་ལི་ཡ]]''' – ཨས་ཊེཡེ་ལི་ཡ། ([[ཨིང་ལིཤ། དབྱིན་སྐད|ཨིང་ལིཤ། དབྱིན་སྐད།]]: ''Australia'')
 * '''[[ཨས་ཊི་ཡ]]''' – ཨཱསི་ཊི་ཡི་ མི་སེར་རྒྱལ་ཁབ། ([[ཇར་མཱན། ཇར་མ་ནིའི་མི་རིགས|ཇར་མཱན། ཇར་མ་ནིའི་མི་རིགས།]]: ''Republik Österreich'')
 * '''[[ཨཛར་བཡེ་ཇན]]''' – ཨ་ཛར་བ་ཡེ་ཇཱན་གྱི་ མི་སེར་རྒྱལ་ཁབ།<ref>See also [[#N|Nagorno-Karabakh]].</ref> (Azerbaijani: ''Azərbaycan Respublikası'')
