--- a/ཨེ་ཤར་ཡ.mw
+++ b/ཨེ་ཤར་ཡ.mw
@@ -24,12 +24,12 @@ The following is the list of all countries.
 * [[ཨ་མི་རི་ཀཱན་ ས་མོ]] – ཨ་མི་རི་ཀཱན་ ས་མོ་། ([[ཡུ་ནའིཊེཊ་སི་ཊེས]]) ([[ཨིང་ལིཤ། དབྱིན་སྐད|ཨིང་ལིཤ། དབྱིན་སྐད།]]: ''American Samoa'')</onlyinclude>
 * '''[[ཨཱན་དོ་ར]]''' – ཨེན་ཌོ་ར་ རྒྱལ་ཕྲན་ རྒྱལ་ཁབ། (Catalan: ''Principat d'Andorra)''
 * '''[[ཨང་གྷོ་ལ]]''' – ཨེང་གོ་ལི་ ་མི་སེར་རྒྱལ་ཁབ། (Portuguese: ''República de Angola'')
-* [[ཨེང་གིུ་ལ།]] – ([[ཡུ་ནའི་ཊེཊ་ཀིང་ཌམ]]) ([[ཨིང་ལིཤ། དབྱིན་སྐད|ཨིང་ལིཤ། དབྱིན་སྐད།]]: ''Anguilla'')
+* [[ཨེང་གིུ་ལ།]] (''[[UK]] overseas territory'') ([[ཨིང་ལིཤ། དབྱིན་སྐད|ཨིང་ལིཤ། དབྱིན་སྐད།]]: ''Anguilla'')
 * '''[[ཨན་ཊི་གུ་ཝ་ ཨེནཌ་ བྷར་བྷུ་ཌ]]''' – ཨན་ཊི་གུ་ཝ་ ཨེནཌ་ བྷར་བྷུ་ཌ། ([[ཨིང་ལིཤ། དབྱིན་སྐད|ཨིང་ལིཤ། དབྱིན་སྐད།]]: ''Antigua and Barbuda'')
 * '''[[ཨར་ཇེན་ཊི་ན]]''' – ཨར་ཇེན་ཊི་ནི་ མི་སེར་རྒྱལ་ཁབ། (Spanish: ''República Argentina'')
 * '''[[ཨར་མི་ནི་ཡ]]''' – ཨར་མི་ནིཡི་ མི་སེར་རྒྱལ་ཁབ། (Armenian: ''Հայաստանի Հանրապետություն'' - ''Hayastani Hanrapetut’yun'')
 * [[ཨ་རུ་བ]] (''Self-governing country in the Kingdom of the Netherlands'')
-* United Kingdom Ascension Island (Dependency of the UK overseas territory of Saint Helena) ([[ཨིང་ལིཤ། དབྱིན་སྐད|ཨིང་ལིཤ། དབྱིན་སྐད།]]: ''Ascension Island'')
+* United Kingdom [[Ascension Island]] (Dependency of the [[UK]] overseas territory of Saint Helena) ([[ཨིང་ལིཤ། དབྱིན་སྐད|ཨིང་ལིཤ། དབྱིན་སྐད།]]: ''Ascension Island'')
 * '''[[ཨས་ཊེཡེ་ལི་ཡ]]''' – ཨས་ཊེཡེ་ལི་ཡ། ([[ཨིང་ལིཤ། དབྱིན་སྐད|ཨིང་ལིཤ། དབྱིན་སྐད།]]: ''Australia'')
 * '''[[ཨས་ཊི་ཡ]]''' – ཨཱསི་ཊི་ཡི་ མི་སེར་རྒྱལ་ཁབ། ([[ཇར་མཱན། ཇར་མ་ནིའི་མི་རིགས|ཇར་མཱན། ཇར་མ་ནིའི་མི་རིགས།]]: ''Republik Österreich'')
 * '''[[ཨཛར་བཡེ་ཇན]]''' – ཨ་ཛར་བ་ཡེ་ཇཱན་གྱི་ མི་སེར་རྒྱལ་ཁབ།<ref>See also [[#N|Nagorno-Karabakh]].</ref> (Azerbaijani: ''Azərbaycan Respublikası'')
