--- a/ཨེ་ཤར་ཡ.mw
+++ b/ཨེ་ཤར་ཡ.mw
@@ -18,10 +18,10 @@ The following is the list of all countries.
 * '''''[[Abkhazia]]'''''* – Republic of Abkhazia
 * '''[[ཨཕ་ག་ནིས་ཏཱན]]''' – ཨཕ་ག་ནིསི་ཏཱན་ རི་པ་ལིག་ སི་ལ་མིག་ (Pashto: ''د افغانستان اسلامي جمهوریت'' - ''Da Afġānistān Islāmī Jumhoryat'')
 * [[Akrotiri and Dhekelia]] – Sovereign Base Areas of Akrotiri and Dhekelia (''UK overseas territory'')
-* [[ཨཱ་ལེནཌི་ མཚོ་གླིང]] – ཨཱ་ལེནཌི་ མཚོ་གླིང། ([[ཕིན་ལེནཌ]]) (Swedish: ''Landskapet Åland'', Finnish: ''Ahvenanmaan maakunta'')
+* [[ཨཱ་ལེནཌི་ མཚོ་གླིང]] – ཨཱ་ལེནཌི་ མཚོ་གླིང། (Åland Islands (''Autonomous province of [[Finland]]'')) (Swedish: ''Landskapet Åland'', Finnish: ''Ahvenanmaan maakunta'')
 * '''[[ཨཱལ་བེ་ནི་ཡ]]''' – ཨཱལ་བ་ནི་ཡི་ མི་སེར་རྒྱལ་ཁབ། (Albanian: ''Republika e Shqipërisë'')
 * '''[[ཨཱལ་ཇི་རི་ཡ]]''' – ཨཱལ་ཇི་རི་ཡ་གི་མི་སེར་དམངས་གཙོ ི་ རྒྱལ་ཁབ། ([[ཨ་རབ་ཀྱི་སྐད་ཡིག|ཨ་རབ་ཀྱི་སྐད་ཡིག།]]: ''الجمهورية الجزائرية الديمقراطية الشعبية'' , [[ཕེརེནཆི། ཕརཱནསི་གི་མི་ཁུངས|ཕེརེནཆི། ཕརཱནསི་གི་མི་ཁུངས།]]: ''République démocratique populaire d'Algérie'')
-* [[ཨ་མི་རི་ཀཱན་ ས་མོ]] – ཨ་མི་རི་ཀཱན་ ས་མོ་། (''[[US]] territory'') ([[ཨིང་ལིཤ། དབྱིན་སྐད|ཨིང་ལིཤ། དབྱིན་སྐད།]]: ''American Samoa'')</onlyinclude>
+* [[ཨ་མི་རི་ཀཱན་ ས་མོ]] – ཨ་མི་རི་ཀཱན་ ས་མོ་། (Territory of American Samoa (''[[US]] territory'')) ([[ཨིང་ལིཤ། དབྱིན་སྐད|ཨིང་ལིཤ། དབྱིན་སྐད།]]: ''American Samoa'')</onlyinclude>
 * '''[[ཨཱན་དོ་ར]]''' – ཨེན་ཌོ་ར་ རྒྱལ་ཕྲན་ རྒྱལ་ཁབ། (Catalan: ''Principat d'Andorra)''
 * '''[[ཨང་གྷོ་ལ]]''' – ཨེང་གོ་ལི་ ་མི་སེར་རྒྱལ་ཁབ། (Portuguese: ''República de Angola'')
 * [[ཨེང་གིུ་ལ།]] (''[[UK]] overseas territory'') ([[ཨིང་ལིཤ། དབྱིན་སྐད|ཨིང་ལིཤ། དབྱིན་སྐད།]]: ''Anguilla'')
