--- a/ཨེ་ཤར་ཡ.mw
+++ b/ཨེ་ཤར་ཡ.mw
@@ -43,7 +43,7 @@ The following is the list of all countries.
 * '''[[བེལ་ཇིཡམ]]''' – བེལ་ཇི་ཡམ་ རྒྱལ་བརྒྱུད་ རྒྱལ་ཁབ། – ([[ཕེརེནཆི། ཕརཱནསི་གི་མི་ཁུངས|ཕེརེནཆི། ཕརཱནསི་གི་མི་ཁུངས།]]: ''Royaume de Belgique'', [[ཇར་མཱན། ཇར་མ་ནིའི་མི་རིགས|ཇར་མཱན། ཇར་མ་ནིའི་མི་རིགས།]]: ''Königreich Belgien'')
 * '''[[བེ་ལིཛ]]''' – བེ་ལིཛ། ([[ཨིང་ལིཤ། དབྱིན་སྐད|ཨིང་ལིཤ། དབྱིན་སྐད།]]: ''Belize'')
 * '''[[བཱེ་ནིན]]''' – Republic of Benin
-* [[བར་མུ་ཌ]] – Bermuda (''UK overseas territory'')
+* [[བར་མུ་ཌ]] – Bermuda (''[[UK]] overseas territory'')
 * '''[[འབྲུག་ཡུལ]]''' – Kingdom of Bhutan
 * '''[[བོ་ལི་ཝིཡ]]''' – Republic of Bolivia
 * '''[[བོསྣི་ཡ་དང་ཧརྫོ་གོ་ཝི་ན]]'''<ref>See also entities [[Federation of Bosnia and Herzegovina]] and [[Republika Srpska]], as well as [[District Brčko]].</ref>
