*Empty MediaWiki Message*

--- a/ཨེ་ཤར་ཡ.mw
+++ b/ཨེ་ཤར་ཡ.mw
@@ -5,8 +5,7 @@ __NOTOC__
 
 '''List of countries'''
 
-The following is the list of all countries.
-<nowiki>*</nowiki> - states without general international recognition.
+The following is the list of all countries.<nowiki>*</nowiki><ref>list of all countries – states without general international recognition.</ref>
 
 
 
