--- a/ཨེ་ཤར་ཡ.mw
+++ b/ཨེ་ཤར་ཡ.mw
@@ -16,7 +16,7 @@ The following is the list of all countries.<nowiki>*</nowiki><ref>list of all co
 <onlyinclude>
 * '''''[[Abkhazia]]'''''* – Republic of Abkhazia
 * '''[[ཨཕ་ག་ནིས་ཏཱན]]''' – ཨཕ་ག་ནིསི་ཏཱན་ རི་པ་ལིག་ སི་ལ་མིག་ (Pashto: ''د افغانستان اسلامي جمهوریت'' - ''Da Afġānistān Islāmī Jumhoryat'')
-* [[Akrotiri and Dhekelia]] – Sovereign Base Areas of Akrotiri and Dhekelia (''UK overseas territory'')
+* [[Akrotiri and Dhekelia]] – Sovereign Base Areas of Akrotiri and Dhekelia (''[[UK]] overseas territory'')
 * [[ཨཱ་ལེནཌི་ མཚོ་གླིང]] – ཨཱ་ལེནཌི་ མཚོ་གླིང། (Åland Islands (''Autonomous province of [[Finland]]'')) (Swedish: ''Landskapet Åland'', Finnish: ''Ahvenanmaan maakunta'')
 * '''[[ཨཱལ་བེ་ནི་ཡ]]''' – ཨཱལ་བ་ནི་ཡི་ མི་སེར་རྒྱལ་ཁབ། (Albanian: ''Republika e Shqipërisë'')
 * '''[[ཨཱལ་ཇི་རི་ཡ]]''' – ཨཱལ་ཇི་རི་ཡ་གི་མི་སེར་དམངས་གཙོ ི་ རྒྱལ་ཁབ། ([[ཨ་རབ་ཀྱི་སྐད་ཡིག|ཨ་རབ་ཀྱི་སྐད་ཡིག།]]: ''الجمهورية الجزائرية الديمقراطية الشعبية'' , [[ཕེརེནཆི། ཕརཱནསི་གི་མི་ཁུངས|ཕེརེནཆི། ཕརཱནསི་གི་མི་ཁུངས།]]: ''République démocratique populaire d'Algérie'')
