--- a/ཨེ་ཤར་ཡ.mw
+++ b/ཨེ་ཤར་ཡ.mw
@@ -45,7 +45,7 @@ The following is the list of all countries.<nowiki>*</nowiki><ref>list of all co
 * [[བར་མུ་ཌ]] – Bermuda (''[[UK]] overseas territory'')
 * '''[[འབྲུག་ཡུལ]]''' – Kingdom of Bhutan
 * '''[[བོ་ལི་ཝིཡ]]''' – Republic of Bolivia
-* '''[[བོསྣི་ཡ་དང་ཧརྫོ་གོ་ཝི་ན]]'''<ref>See also entities [[Federation of Bosnia and Herzegovina]] and [[Republika Srpska]], as well as [[District Brčko]].</ref>
+* '''[[བོསྣི་ཡ་དང་ཧརྫོ་གོ་ཝི་ན]]''' – Bosnia and Herzegovina<ref>See also entities [[Federation of Bosnia and Herzegovina]] and [[Republika Srpska]], as well as [[District Brčko]].</ref>
 * '''[[བྷོཙ་ཝ་ན]]''' – Republic of Botswana
 * '''[[བཱརཱ་ཛིལ་]]''' – Federative Republic of Brazil
 * '''[[བུ་རུ་ནེ]]''' – Negara Brunei Darussalam
