--- a/ཨེ་ཤར་ཡ.mw
+++ b/ཨེ་ཤར་ཡ.mw
@@ -50,7 +50,7 @@ The following is the list of all countries.<nowiki>*</nowiki><ref>list of all co
 * '''[[བཱརཱ་ཛིལ་]]''' – Federative Republic of Brazil
 * '''[[བུ་རུ་ནེ]]''' – Negara Brunei Darussalam
 * '''[[བཱལ་གེ་རི་ཡ]]''' – Republic of Bulgaria
-* '''[[བརཀི་ན་ཕས]]'''
+* '''[[བརཀི་ན་ཕས]]''' – Burkina Faso
 * '''[[བྷུ་རུན་ཌི]]''' – Republic of Burundi
 
 === C ===
