--- a/ཨེ་ཤར་ཡ.mw
+++ b/ཨེ་ཤར་ཡ.mw
@@ -136,8 +136,8 @@ The following is the list of all countries.<nowiki>*</nowiki><ref>list of all co
 * '''[[ཨྀཊ་ལི]]''' – Italian Republic
 
 === J ===
-* '''[[ཇ་མའི་ཀ]]'''
-* '''[[ཇ་པཱན]]''' - State of Japan
+* '''[[ཇ་མའི་ཀ]]''' – Jamaica
+* '''[[ཇ་པཱན]]''' – State of Japan
 * [[ཇར་སི]] – Bailiwick of Jersey (''British Crown dependency'')
 * '''[[ཇོར་ཌན]]''' – Hashemite Kingdom of Jordan
 
