--- a/ཨེ་ཤར་ཡ.mw
+++ b/ཨེ་ཤར་ཡ.mw
@@ -163,7 +163,7 @@ The following is the list of all countries.<nowiki>*</nowiki><ref>list of all co
 * '''[[Luxembourg]]''' – Grand Duchy of Luxembourg
 
 === M ===
-* [[Macao]] – Macao Special Administrative Region of the People's Republic of China (''Area of special sovereignty'')
+* [[Macao]] – Macao Special Administrative Region of the [[People's Republic of China]] (''Area of special sovereignty'')
 * '''[[Macedonia]]''' – Republic of Macedonia<ref>Also known as the former Yugoslav Republic of Macedonia.</ref>
 * '''[[Madagascar]]''' – Republic of Madagascar
 * '''[[Malawi]]''' – Republic of Malawi
@@ -179,10 +179,10 @@ The following is the list of all countries.<nowiki>*</nowiki><ref>list of all co
 * '''[[Micronesia]]''' – Federated States of Micronesia
 * '''[[Moldova]]''' – Republic of Moldova<ref>See also [[#T|Transnistria]].</ref>
 * '''[[Monaco]]''' – Principality of Monaco
-* '''[[Mongolia]]''' - Republic of Mongolia
+* '''[[སོག་པོ་]]''' - Republic of Mongolia
 * '''[[Montenegro]]''' – Republic of Montenegro
-* [[Montserrat]] (''UK overseas territory'')
-* '''[[Morocco]]''' – Kingdom of Morocco<ref>See also [[#W|Western Sahara]].</ref>
+* [[Montserrat]] (''[[UK]] overseas territory'')
+* '''[[མོ་རོ་ཀོ]]''' – Kingdom of Morocco<ref>See also [[#W|Western Sahara]].</ref>
 * '''[[Mozambique]]''' – Republic of Mozambique
 * '''[[Myanmar]]''' – Union of Myanmar
 
