--- a/ཨེ་ཤར་ཡ.mw
+++ b/ཨེ་ཤར་ཡ.mw
@@ -184,7 +184,7 @@ The following is the list of all countries.<nowiki>*</nowiki><ref>list of all co
 * [[Montserrat]] (''[[UK]] overseas territory'')
 * '''[[མོ་རོ་ཀོ]]''' – Kingdom of Morocco<ref>See also [[#W|Western Sahara]].</ref>
 * '''[[Mozambique]]''' – Republic of Mozambique
-* '''[[Myanmar]]''' – Union of Myanmar
+* '''[[མེ་མར་]]''' – Union of Myanmar
 
 === N ===
 * '''''[[Nagorno-Karabakh]]''''' – Nagorno-Karabakh Republic.
