--- a/ཨེ་ཤར་ཡ.mw
+++ b/ཨེ་ཤར་ཡ.mw
@@ -191,10 +191,10 @@ The following is the list of all countries.<nowiki>*</nowiki><ref>list of all co
 * '''[[Namibia]]''' – Republic of Namibia
 * '''[[Nauru]]''' – Republic of Nauru
 * '''[[བལ་ཡུལ]]''' – State of Nepal
-* '''[[Netherlands]]''' – Kingdom of the Netherlands.
-* [[Netherlands Antilles]] (''Self-governing country in the Kingdom of the Netherlands'')
+* '''[[ནེ་དར་ལེནཌསི་]]''' – Kingdom of the Netherlands.
+* [[Netherlands Antilles]] (''Self-governing country in the [[Kingdom of the Netherlands]]'')
 * [[New Caledonia]] – Territory of New Caledonia and Dependencies (''French community sui generis'')
-* '''[[New Zealand]]'''
+* '''[[ནིའུ་ཛི་ལེནཌ་]]''' – New Zealand
 * '''[[Nicaragua]]''' – Republic of Nicaragua
 * '''[[Niger]]''' – Republic of Niger
 * '''[[Nigeria]]''' – Federal Republic of Nigeria
@@ -202,7 +202,7 @@ The following is the list of all countries.<nowiki>*</nowiki><ref>list of all co
 * [[Norfolk Island]] – Territory of Norfolk Island (''Australian overseas territory'')
 * '''''[[Northern Cyprus]]''''' – Turkish Republic of Northern Cyprus.
 * [[Northern Mariana Islands]] – Commonwealth of the Northern Mariana Islands (''US commonwealth'')
-* '''[[Norway]]''' – Kingdom of Norway
+* '''[[ནོ་ཝེ་]]''' – Kingdom of Norway
 
 === O ===
 * '''[[Oman]]''' – Sultanate of Oman.
