*Empty MediaWiki Message*

--- a/པ་ར་གུ་ཝའི.mw
+++ b/པ་ར་གུ་ཝའི.mw
@@ -8,7 +8,7 @@
 
 
 
-རྒྱལ་ས [[ཨ་སུན་སི་འོན།]] ''(<nowiki>[[Asunción]]</nowiki>ཡིང་ན་Paraguái)''།
+རྒྱལ་ས [[ཨ་སུན་སི་འོན།]] ''([[Asunción]] ཡིང་ན་ Paraguái)''།
 
 
 
